force-app/main/default/objects/X7S_Questionnaire__c/X7S_Questionnaire__c.object-meta.xml
<CustomObject>
    <description>Object to support Questionnaire records as part of the Questionnaire accelerator from 7Summits.</description>
    <label>7S Questionnaire</label>
    <nameField>
        <label>Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>