force-app/main/default/objects/X7S_Questionnaire__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This questionnaire will only display in the flow if it is marked as active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>