force-app/main/default/objects/X7S_Questionnaire__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Provide a user-facing description of the questionnaire that explains its purpose.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>