force-app/main/default/objects/X7S_Questionnaire__c/fields/Header_Image__c.field-meta.xml
<CustomField>
    <fullName>Header_Image__c</fullName>
    <inlineHelpText>Enter the name of an image-based static resource here to use it as the header of your flow.</inlineHelpText>
    <label>Header Image (Static Resource)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>