force-app/main/default/objects/X7S_Questionnaire__c/fields/Number_of_Questions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Questions__c</fullName>
    <label>Number of Questions</label>
    <summaryForeignKey>X7S_Questionnaire_Question__c.Flow_Scenario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>