force-app/main/default/objects/X7S_Questionnaire__c/fields/Quiz_Scored__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Scored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quiz (Scored)</label>
    <type>Checkbox</type>
</CustomField>