force-app/main/default/objects/X7S_Questionnaire__c/fields/Success_Text__c.field-meta.xml
<CustomField>
    <fullName>Success_Text__c</fullName>
    <inlineHelpText>Enter the text to be displayed upon successful completion of the questionnaire.</inlineHelpText>
    <label>Success Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>